<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:foregroundGravity="center_horizontal"/>
    <EditText
        android:id="@+id/email_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittxtshadow"
        android:elevation="2dp"
        android:paddingLeft="20dp"
        android:hint="Email"
        android:textColorHint="@color/Biru"
        android:inputType="textEmailAddress"

        />
    <EditText
        android:layout_marginTop="25dp"
        android:id="@+id/password_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittxtshadow"
        android:hint="Password"
        android:textColorHint="@color/Biru"
        android:paddingLeft="20dp"
        android:inputType="textPassword"/>
    <ProgressBar
        android:id="@+id/prog_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/log_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_login"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="Login"
        android:textColor="@color/Putih"
        android:textStyle="bold"
        android:elevation="50dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="135dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/member"
            android:textColor="@color/Putih"
            />

        <TextView
            android:id="@+id/regis_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:textColor="@color/Putih" />
    </LinearLayout>

    <TextView
        android:id="@+id/lupapass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_gravity="center"
        android:textColor="@color/Putih"
        android:layout_marginTop="20dp"
        />
</LinearLayout>