<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/mitsubishi"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"><LinearLayout
                android:id="@+id/Xpander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/menu3"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Xpander"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eksterior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/eks_xpander"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:id="@+id/mobil1_toyota"
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/interior_xpander"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/Spek"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/Xpander1"
                    android:layout_marginBottom="20dp"/></LinearLayout></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"><LinearLayout
                android:id="@+id/avanza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/menu3"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Avanza"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eksterior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/eks_pajero"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/interior_pajero"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/Spek"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/pajero"
                    android:layout_marginBottom="20dp"/></LinearLayout></LinearLayout>



        </LinearLayout>

    </ScrollView>

</FrameLayout>