<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@drawable/toyota">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"><LinearLayout
                android:id="@+id/alphard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/menu3"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alphard"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eksterior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/alphard"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:id="@+id/mobil1_toyota"
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/interior_alphard"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/Spek"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/Alphard"
                    android:layout_marginBottom="20dp"/></LinearLayout></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"><LinearLayout
                android:id="@+id/avanza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/menu3"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Avanza"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eksterior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/avanza1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interior"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"/>
                <ImageView
                    android:layout_width="309dp"
                    android:layout_height="147dp"
                    android:background="@drawable/menu2"
                    android:src="@drawable/avanza_interior"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/Spek"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/Putih"
                    android:text="@string/Avanza1"
                    android:layout_marginBottom="20dp"/></LinearLayout></LinearLayout>



        </LinearLayout>

    </ScrollView>

</FrameLayout>